--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,20 @@ networks:
 
 version: "3"
 services:
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: nestjs-app
+    restart: always
+    ports:
+      - "3000:3000"
+    depends_on:
+      - postgres
+    networks:
+      - postgres
+    env_file:
+      - .env
   postgres:
     container_name: postgres
     image: postgres:latest
@@ -28,5 +42,7 @@ services:
       - /data/pgadmin:/root/.pgadmin
     env_file:
       - docker.env
+    depends_on:
+      - postgres
     networks:
       - postgres
