--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       dockerfile: Dockerfile
     container_name: nestjs-app
     restart: always
+    volumes:
+      - ./:/app
     ports:
       - "3000:3000"
     depends_on:
@@ -18,6 +20,7 @@ services:
       - postgres
     env_file:
       - .env
+
   postgres:
     container_name: postgres
     image: postgres:latest
